--- a/UI/ColorVision.Solution/TreeViewControl.xaml
+++ b/UI/ColorVision.Solution/TreeViewControl.xaml
@@ -73,8 +73,29 @@
             <TreeView  x:Name="SolutionTreeView" Style="{StaticResource TreeView.Small}"  BorderThickness="0" Padding="0" Margin="3,3,3,0" Background="{DynamicResource GlobalBackground}" ScrollViewer.HorizontalScrollBarVisibility="Visible">
                 <TreeView.Resources>
                     <local:TreeViewItemMarginConverter x:Key="TreeViewItemMarginConverter" />
+                    <Style x:Key="ExpandCollapseToggleStyle" TargetType="{x:Type ToggleButton}">
+                        <Setter Property="Focusable" Value="False" />
+                        <Setter Property="Width" Value="16" />
+                        <Setter Property="Height" Value="16" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ToggleButton}">
+                                    <Viewbox x:Name="ExpandViewbox" Height="12" Width="12" VerticalAlignment="Center" >
+                                        <Rectangle  Height="12" Width="12" x:Name="ExpandPath" Fill="{DynamicResource DIScrollbarArrowCollapsed}"/>
+                                    </Viewbox>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="ToggleButton.IsChecked" Value="True">
+                                            <Setter TargetName="ExpandPath" Property="Fill" Value="{DynamicResource DIScrollbarArrowDownRight}" />
+                                            <Setter TargetName="ExpandViewbox" Property="Margin" Value="0,2,0,0" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
                 </TreeView.Resources>
                 <TreeView.ItemContainerStyle>
+                    
                     <Style TargetType="{x:Type TreeViewItem}"  BasedOn="{StaticResource TreeViewItemBaseStyle}">
                         <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
                         <Setter Property="IsSelected" Value="{Binding IsSelected, Mode=TwoWay}" />
