--- a/UI/ColorVision.Themes/Themes/Icons.xaml
+++ b/UI/ColorVision.Themes/Themes/Icons.xaml
@@ -9,7 +9,37 @@
     <SolidColorBrush x:Key="light-red" Color="#c50b17" Opacity="1" />
     <SolidColorBrush x:Key="light-teal" Color="#006758" Opacity="1" />
     <SolidColorBrush x:Key="light-blue" Color="#005dba" Opacity="1" />
+    <SolidColorBrush x:Key="light-green" Color="#1f801f" Opacity="1" />
     <System:Double x:Key="cls-1">0.75</System:Double>
+    
+    <DrawingBrush x:Key="DIRun" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup >
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,16H0V0H16Z" />
+                </DrawingGroup>
+                <DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource light-green}" Geometry="F1M3.777,1.084,3,1.5v12l.777.416,9-6V7.084Z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+    <DrawingBrush x:Key="DIRunPaused" Stretch="None">
+        <DrawingBrush.Drawing>
+            <DrawingGroup>
+                <DrawingGroup >
+                    <GeometryDrawing Brush="{DynamicResource canvas}" Geometry="F1M16,16H0V0H16Z" />
+                </DrawingGroup>
+                <DrawingGroup>
+                    <DrawingGroup Opacity="{DynamicResource cls-1}">
+                        <GeometryDrawing Brush="{DynamicResource light-green}" Geometry="F1M14.5,8l-7,4.375V3.625Z" />
+                    </DrawingGroup>
+                    <GeometryDrawing Brush="{DynamicResource light-green}" Geometry="F1M4,3V13H3V3Z" />
+                    <GeometryDrawing Brush="{DynamicResource light-green}" Geometry="F1M7.765,3.2,7,3.625v8.75l.765.424,7-4.375V7.576ZM8,11.473V4.527L13.557,8Z" />
+                </DrawingGroup>
+            </DrawingGroup>
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
     <DrawingBrush x:Key="DIScrollbarArrowDownRight" Stretch="None">
         <DrawingBrush.Drawing>
             <DrawingGroup>
