--- a/Engine/ColorVision.Engine/Services/Devices/Spectrum/InfoSpectrum.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Spectrum/InfoSpectrum.xaml
@@ -86,12 +86,12 @@
                     <TabItem Header="{x:Static properties:Resources.Manager}">
                         <ScrollViewer Margin="5"  HorizontalScrollBarVisibility="Disabled">
                             <UniformGrid Margin="5" Columns="3" SizeChanged="UniformGrid_SizeChanged" VerticalAlignment="Top">
-                                <Button Content="{x:Static properties:Resources.ModifyConfiguration}" Margin="5" Height="100" Width="180" Command="{Binding EditCommand}"/>
-                                 <Button Content="{x:Static properties:Resources.RestartService}" Margin="5" Height="100" Width="180" Command="{Binding RefreshCommand}"/>
-                                <Button Content="上传许可证" Margin="5" Height="100" Width="180" Command="{Binding UploadLincenseCommand}"/>
+                                <Button  Style="{StaticResource ButtonCommand}" Content="{x:Static properties:Resources.ModifyConfiguration}"  Command="{Binding EditCommand}"/>
+                                <Button  Style="{StaticResource ButtonCommand}" Content="{x:Static properties:Resources.RestartService}"  Command="{Binding RefreshCommand}"/>
+                                <Button  Style="{StaticResource ButtonCommand}" Content="上传许可证" Command="{Binding UploadLincenseCommand}"/>
 
-                                <hc:Badge Value="{Binding Count}"   Margin="5" BadgeMargin="0,-14,-10,0"  Style="{StaticResource BadgeDanger}" >
-                                    <Button Content="刷新设备"  HorizontalAlignment="Stretch" VerticalAlignment="Top"  Height="100"  Command="{Binding RefreshDeviceIdCommand}" />
+                                <hc:Badge Value="{Binding Count}"  Style="{StaticResource BadgeDanger}" >
+                                    <Button Style="{StaticResource ButtonCommand}" Content="刷新设备"   Command="{Binding RefreshDeviceIdCommand}" />
                                 </hc:Badge>
                             </UniformGrid>
                         </ScrollViewer>
