--- a/Engine/ColorVision.Engine/Templates/POI/EditPoiParam.xaml
+++ b/Engine/ColorVision.Engine/Templates/POI/EditPoiParam.xaml
@@ -526,19 +526,19 @@
                 <ToggleButton x:Name="ToggleButtonDrag" IsChecked="{Binding ImageEditMode}"  Margin="1,0" ToolTip="可以按下Ctrl缩放和移动图像">
                     <Image Style="{StaticResource ToolBarImage}" Source="{StaticResource DrawingImagedrag}"/>
                 </ToggleButton>
-                <Button Command="{Binding ZoomUniform}"  Margin="1,0">
+                <Button Command="{Binding ZoomUniformCommand}"  Margin="1,0">
                     <Image  Style="{StaticResource ToolBarImage}" Source="{StaticResource DrawingImage1_1}"/>
                 </Button>
-                <Button Command="{Binding ZoomIncrease}"  Margin="1,0">
+                <Button Command="{Binding ZoomInCommand}"  Margin="1,0">
                     <Image Style="{StaticResource ToolBarImage}" Source="{StaticResource DrawingImagezoom_in}" />
                 </Button>
-                <Button  Command="{Binding ZoomDecrease}"  Margin="1,0">
+                <Button  Command="{Binding ZoomOutCommand}"  Margin="1,0">
                     <Image  Style="{StaticResource ToolBarImage}" Source="{StaticResource DrawingImagezoom_out}"/>
                 </Button>
-                <Button Command="{Binding ZoomNone}"  Margin="1,0">
+                <Button Command="{Binding ZoomNoneCommand}"  Margin="1,0">
                     <Image  Style="{StaticResource ToolBarImage}" Source="{StaticResource DrawingImageexpend}"/>
                 </Button>
-                <ToggleButton Command="{Binding MaxCommand}" Margin="1,0" >
+                <ToggleButton Command="{Binding FullCommand}" Margin="1,0" >
                     <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImageMax}"/>
                 </ToggleButton>
                 <TextBox   BorderThickness="1"  HorizontalContentAlignment="Center"  Text="{Binding ElementName=Zoombox1,Path=ContentMatrix.M11,StringFormat={}{0:P1}}" />
